--- a/views/templates/options-list.jade
+++ b/views/templates/options-list.jade
@@ -1,8 +1,9 @@
 .container(ng-show="entries.length > 0")
   h2 The List
 .container(ng-repeat="entry in entries")
-  .entry(class="active-{{entry.active}}") {{ entry.entry }}
+  span.dropdown(dropdown on-toggle="toggled(open)")
+    a.entry.dropdown-toggle(href class="active-{{entry.active}}" dropdown-toggle) {{ entry.entry }}
+    input.dropdown-menu(type="text" value="{{entry.entry}}" ng-model="entry.entry")
   input(type="checkbox" ng-model="entry.active" id="{{entry.entry}}")
   label(for="{{entry.entry}}")
     span.glyphicon.glyphicon-remove-circle.delete-item
-  h2 {{ dismiss }}
