added edit in place for choices

--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -63,3 +63,9 @@ input[type=checkbox]
   text-decoration line-through
   background tomato
   color white
+
+.dropdown-menu
+  top: -9px
+  border-radius 10px
+  border none
+  padding-left 7px
