--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -49,8 +49,8 @@ input[type=checkbox]
   top 9px
 
 .choose
-  background lightblue
-  color #777
+  background tomato
+  color #fff
   margin-top 15px
 
 .the-choice
