added message if no available choices

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(lang='en' ng-app='app')
     meta(charset="utf-8")
     title Random Choice 2.0
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Play')
     link(rel='stylesheet', href='/styles/css/main.css')
 
 
