changes to entering choice

--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -10,10 +10,34 @@ h1
 input
   color #555
 
+input:focus
+  outline 0
+
+button:focus
+  outline 0
+
+.entry-input
+  background #fff
+  border none
+  border-radius 5px 0 0 5px
+  color #777
+  height 32px
+  padding-left 10px
+  font-size 1.2em
+
+
 .submit-button
   background lightblue
   border none
+  border-radius 0 5px 5px 0
+  border-left 1px solid #777
+  font-size 15px
   color #777
+  display inline-block
+  height 32px
+  top -1px
+  position relative
+  padding 5px
 
 .entry
   background white
