--- a/views/templates/main.jade
+++ b/views/templates/main.jade
@@ -1,8 +1,9 @@
 .container(ng-controller='MainController')
   h1 Add options...
   .container.row
-    .input-group.col-md-6.col-lg-6.col-sm-6
-      span.btn.input-group-addon.submit-button(ng-click="submitChoice()") Add it to the list...
-      input.form-control(type="text" ng-model="entry" placeholder="Enter choices...")
+    form.form-inline
+      .form-group.col-md-6.col-lg-6.col-sm-6
+        input.entry-input(type="text" ng-model="entry" placeholder="Enter choices..." required)
+        .submit-button(ng-click="submitChoice()") Add it to the list...
   options-list
   winner
