--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -39,6 +39,17 @@ button:focus
   position relative
   padding 5px
 
+.submit-button:hover
+  background #777
+  color lightblue
+  border 1px solid lightblue
+  box-sizing border-box
+  top 0px
+  margin-bottom 1px
+
+.submit-button:active
+  top 1px
+
 .entry
   background white
   color #555
@@ -78,6 +89,14 @@ input[type=checkbox]
   background tomato
   color #fff
   margin-top 15px
+
+.choose:hover
+  background #777
+  color tomato
+  border 1px solid tomato
+
+.choose:focus
+  outline 0
 
 .the-choice
   background white
