--- a/views/templates/main.jade
+++ b/views/templates/main.jade
@@ -1,5 +1,5 @@
 .container(ng-controller='MainController')
-  h1 Add options...
+  h1 Add Choices To Make A Random Selection...
   .container.row
     form.form-inline(ng-submit="submitChoice()")
       .form-group.col-md-6.col-lg-6.col-sm-6
