--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -53,13 +53,13 @@ button:focus
 .entry
   background white
   color #555
+  font-size 1.2em
+  overflow scroll
   display inline-block
-  width 30%
+  padding 2px 10px
   height 30px
   margin-top 15px
   border-radius 10px
-  padding-top 5px
-  padding-left 10px
 
 input[type=checkbox]
   display none
@@ -75,7 +75,7 @@ input[type=checkbox]
   height 30px
   padding 2px
   margin-left 4px
-  top 7px
+  top -1px
 
 .delete-item:hover
   cursor pointer
@@ -83,7 +83,7 @@ input[type=checkbox]
   background #fff
 
 .delete-item:active
-  top 9px
+  top 1px
 
 .choose
   background tomato
@@ -110,7 +110,9 @@ input[type=checkbox]
   color white
 
 .dropdown-menu
-  top: -9px
+  top: -19px
   border-radius 10px
   border none
   padding-left 7px
+  font-size 1.2em
+  width 100%
