--- a/views/templates/options-list.jade
+++ b/views/templates/options-list.jade
@@ -1,5 +1,6 @@
 .container(ng-show="entries.length > 0")
   h2 The List
+    button.reset(ng-click="reset()") Reset?
 .container(ng-repeat="entry in entries")
   span.dropdown(dropdown on-toggle="toggled(open)")
     a.entry.dropdown-toggle(href class="active-{{entry.active}}" dropdown-toggle) {{ entry.entry }}
