Added Read Me info page

--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -16,6 +16,44 @@ input:focus
 button:focus
   outline 0
 
+a:hover
+  text-decoration none
+  color #fff
+
+.read-me
+  background tomato
+  color #fff
+  position relative
+  top -66px
+  padding 5px
+  border-radius 0 0 10px 10px
+
+.read-me:hover
+  background #777
+  color tomato
+  border 1px solid tomato
+
+.back
+  background tomato
+  color #fff
+  padding 5px
+  border-radius 5px
+  position relative
+  top -5px
+  right 16px
+
+.back:hover
+  background #fff
+  color tomato
+  border 1px solid tomato
+
+.info-div
+  background #fff
+  color #777
+  width 60%
+  border-radius 0 0 10px 10px
+  overflow scroll
+
 .entry-input
   background #fff
   border none
