fixed choice color bug

--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -18,7 +18,7 @@ button:focus
 
 a:hover
   text-decoration none
-  color #fff
+  color inherit
 
 .read-me
   background tomato
@@ -112,6 +112,9 @@ a:hover
   height 30px
   margin-top 15px
   border-radius 10px
+
+.entry:hover
+  color #555
 
 input[type=checkbox]
   display none
