--- a/views/templates/winner.jade
+++ b/views/templates/winner.jade
@@ -1,5 +1,5 @@
 .container(ng-show="entries.length >= 2")
-  h2 The Choice
+  h2.choice-title The Choice
   button.btn.choose(ng-click="choose()") Random Choice...
 
 .container(ng-show="finalChoice.length > 1 && !emptySet && selectedChoices.length > 1")
