--- a/views/templates/main.jade
+++ b/views/templates/main.jade
@@ -2,11 +2,14 @@
   a.pull-right.read-me(href="#/info") read me...
   h1 Add Choices To Make A Random Selection...
   .container.entries-container
-    form.form-inline(ng-submit="submitChoice()")
+    form.form-inline.big-form(ng-submit="submitChoice()")
       .form-group.row.entry-group
         input.col-md-3.col-sm-4.col-xs-8.entry-input(type="text" ng-model="entry" placeholder="Enter choices..." required)
         input.col-md-2.col-sm-3.col-xs-4.submit-button(type="submit" value="Add it to the list...")
-
+    form.form-inline.wee-form(ng-submit="submitChoice()")
+      .form-group.row.entry-group
+        input.col-md-3.col-sm-4.col-xs-8.entry-input(type="text" ng-model="entry" placeholder="Enter choices..." required)
+        input.col-md-2.col-sm-3.col-xs-4.submit-button(type="submit" value="Add")
 
   options-list
   winner
