--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,7 @@ html(lang='en' ng-app='app')
     title Random Choice 2.0
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
     link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Play')
-    link(rel='stylesheet', href='/styles/css/main.css')
-
+    link(rel='stylesheet', href='/styles/main.css')
 
   body
     block content
