--- a/dev/styles/main.styl
+++ b/dev/styles/main.styl
@@ -31,7 +31,7 @@ a:hover
   position relative
   top -1px
   padding 5px
-  border-radius 0 0 10px 10px
+  border-radius 0 0 2px 2px
   @media screen and (max-width: 770px)
     width 100%
     border-radius 0
@@ -47,7 +47,7 @@ a:hover
   background tomato
   color #fff
   padding 5px
-  border-radius 5px
+  border-radius 2px
   position relative
   top -5px
   right 16px
@@ -66,7 +66,7 @@ a:hover
   background #fff
   color #777
   width 60%
-  border-radius 0 0 10px 10px
+  border-radius 0 0 5px 5px
   @media screen and (max-width: 770px)
     width 90%
     position relative
@@ -76,7 +76,7 @@ a:hover
 .entry-input
   background #fff
   border none
-  border-radius 5px 0 0 5px
+  border-radius 2px 0 0 2px
   color #777
   height 32px
   padding-left 10px
@@ -104,7 +104,7 @@ a:hover
 .submit-button
   background lightblue
   border none
-  border-radius 0 5px 5px 0
+  border-radius 0 2px 2px 0
   border-left 1px solid #777
   font-size 15px
   color #777
@@ -132,7 +132,7 @@ a:hover
   border none
   background tomato
   color #fff
-  border-radius 8px
+  border-radius 2px
   margin-left 12px
   font-size 0.5em
   @media screen and (max-width: 770px)
@@ -159,7 +159,7 @@ a:hover
   padding 2px 10px
   height 30px
   margin-top 15px
-  border-radius 10px
+  border-radius 2px
   @media screen and (max-width: 770px)
     font-size 1.6em
     height 40px
@@ -178,7 +178,6 @@ input[type=checkbox]
   font-size 27px
   display inline-block
   border none
-  border-radius 6px
   width 30px
   height 30px
   padding 2px
@@ -201,6 +200,7 @@ input[type=checkbox]
   background tomato
   color #fff
   margin-top 15px
+  border-radius 2px
   @media screen and (max-width: 770px)
     margin-top 0
     height 49px
@@ -209,12 +209,12 @@ input[type=checkbox]
 
 .choose:hover
   background #777
-  color tomato
+  color #fff
   border 1px solid tomato
 
 .choose:focus
   outline 0
-  color tomato
+  color #fff
 
 .choice-title
   @media screen and (max-width: 770px)
@@ -223,7 +223,7 @@ input[type=checkbox]
 .the-choice
   background white
   color #555
-  border-radius 10px
+  border-radius 2px
   width 60%
   @media screen and (max-width: 770px)
     border-radius 0
@@ -235,8 +235,8 @@ input[type=checkbox]
   color white
 
 .dropdown-menu
-  top: -19px
-  border-radius 10px
+  top: -12px
+  border-radius 2px
   border none
   padding-left 7px
   font-size 1.2em
