Fixed positioning of delete buttons 	• Moved button to left side of element 	• Fixed position of :active to look more natural

--- a/views/templates/options-list.jade
+++ b/views/templates/options-list.jade
@@ -2,9 +2,10 @@
   h2 The List
     button.reset(ng-click="reset()") Reset?
 .container(ng-repeat="entry in entries")
+  label(for="{{entry.entry}}")
+    span.glyphicon.glyphicon-remove-circle.delete-item
+  |&nbsp
   span.dropdown(dropdown on-toggle="toggled(open)")
     a.entry.dropdown-toggle(href class="active-{{entry.active}}" dropdown-toggle) {{ entry.entry }}
     input.dropdown-menu(type="text" value="{{entry.entry}}" ng-model="entry.entry"  ng-click="$event.stopPropagation()")
   input(type="checkbox" ng-model="entry.active" id="{{entry.entry}}")
-  label(for="{{entry.entry}}")
-    span.glyphicon.glyphicon-remove-circle.delete-item
