centered text on .the-choice

--- a/dev/styles/main.styl
+++ b/dev/styles/main.styl
@@ -224,7 +224,8 @@ input[type=checkbox]
   background white
   color #555
   border-radius 2px
-  width 60%
+  width 390px
+  text-align center
   @media screen and (max-width: 770px)
     border-radius 0
     width 100%
