position and style of delete checkbox fixed for mobile view

--- a/dev/styles/main.styl
+++ b/dev/styles/main.styl
@@ -162,13 +162,27 @@ a:hover
   border-radius 2px
   @media screen and (max-width: 770px)
     font-size 1.6em
-    height 40px
+    padding 0px 10px
+    height 100%
     margin-top 2px
     border-radius 0
-    width 89%
+    width 100%
 
 .entry:hover
   color #555
+
+.input-group
+  margin-bottom 4px
+  height 40px
+
+.input-group-addon
+  background tomato
+  color white
+  border none
+  font-size 1.5em
+  padding 0px 20px
+  position relative
+  top 2px
 
 input[type=checkbox]
   display none
