--- a/views/templates/options-list.jade
+++ b/views/templates/options-list.jade
@@ -1,7 +1,7 @@
 .container.list-header(ng-show="entries.length > 0")
   h2 The List
     button.reset(ng-click="reset()") Reset?
-.container(ng-repeat="entry in entries")
+.container.big-form(ng-repeat="entry in entries")
   label(for="{{entry.entry}}")
     span.glyphicon.glyphicon-remove-circle.delete-item
   |&nbsp
@@ -9,3 +9,12 @@
     a.entry.dropdown-toggle(href class="active-{{entry.active}}" dropdown-toggle) {{ entry.entry }}
     input.dropdown-menu(type="text" value="{{entry.entry}}" ng-model="entry.entry"  ng-click="$event.stopPropagation()")
   input(type="checkbox" ng-model="entry.active" id="{{entry.entry}}")
+    
+.container.wee-form(ng-repeat="entry in entries")
+  .input-group
+    span.dropdown(dropdown on-toggle="toggled(open)")
+      a.entry.dropdown-toggle(href class="active-{{entry.active}}" dropdown-toggle) {{ entry.entry }}
+      input.dropdown-menu(type="text" value="{{entry.entry}}" ng-model="entry.entry"  ng-click="$event.stopPropagation()")
+    .input-group-addon
+      label(for="{{entry.entry}}") X
+    input(type="checkbox" ng-model="entry.active" id="{{entry.entry}}")
