--- a/dev/styles/main.styl
+++ b/dev/styles/main.styl
@@ -158,6 +158,7 @@ a:hover
   display inline-block
   padding 2px 10px
   height 30px
+  width 480px
   margin-top 15px
   border-radius 2px
   @media screen and (max-width: 770px)
